--- a/app/kubernetes/components/yaml-inspector/yamlInspector.html
+++ b/app/kubernetes/components/yaml-inspector/yamlInspector.html
@@ -6,6 +6,7 @@
     placeholder="# Define or paste the content of your manifest here"
     read-only="true"
     hide-title="true"
+    on-change="($ctrl.onChange)"
   >
   </web-editor-form>
   <div class="py-5">
