--- a/mustache-templates/upgrade-docker.yml.mustache
+++ b/mustache-templates/upgrade-docker.yml.mustache
@@ -5,7 +5,7 @@ services:
     image: {{updater_image}}{{^updater_image}}portainer/portainer-updater:latest{{/updater_image}}
     command: ["portainer", 
       "--image", "{{image}}{{^image}}portainer/portainer-ee:latest{{/image}}",
-      "--env-type", "standalone",
+      "--env-type", "{{envType}}{{^envType}}standalone{{/envType}}",
       "--license", "{{license}}"
     ]
     {{#skip_pull_image}}
